--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
   "dependencies": {
-    "axios": "^1.5.0",
+    "@distube/ytdl-core": "^4.13.2",
+    "@rodrigogs/xvideos": "^1.3.0",
+    "@tobyg74/tiktok-api-dl": "^1.0.10",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.0",
+    "gify": "^0.2.0",
     "google-it": "^1.6.4",
-    "jimp": "^0.22.10",
+    "html-to-text": "^9.0.5",
+    "jimp": "^0.3.5",
+    "jquery": "^3.7.1",
+    "jsdom": "^24.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "node-cron": "^3.0.2",
+    "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
     "openai": "^4.11.0",
-    "puppeteer": "^21.3.1",
+    "puppeteer": "^21.5.2",
     "puppeteer-core": "^21.2.0",
     "python-shell": "^5.0.0",
     "qrcode-terminal": "^0.12.0",
+    "sanitize-filename": "^1.6.3",
+    "selenium-webdriver": "^4.15.0",
+    "stream-buffers": "^3.0.2",
+    "string-strip-html": "^13.4.3",
+    "term-img": "^6.0.0",
+    "tesseract.js": "^5.0.5",
+    "text-to-speech": "^1.0.10",
     "venom-bot": "^5.0.20",
-    "whatsapp-web.js": "^1.22.1"
+    "whatsapp-web.js": "^1.23.0",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.5",
+    "ytsr": "^3.8.4"
   }
 }
