--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "emoji": "^0.3.2",
     "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
-    "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
     "gify": "^0.2.0",
     "google-it": "^1.6.4",
@@ -31,13 +31,15 @@
     "openai": "^4.11.0",
     "patentes-chile": "^3.0.0",
     "phub": "^1.1.4",
+    "playwright": "^1.44.1",
     "puppeteer": "^22.8.2",
-    "puppeteer-core": "^21.2.0",
+    "puppeteer-core": "^22.12.0",
     "python-shell": "^5.0.0",
     "qrcode-terminal": "^0.12.0",
     "readline-sync": "^1.4.10",
     "sanitize-filename": "^1.6.3",
     "selenium-webdriver": "^4.15.0",
+    "sharp": "^0.33.5",
     "sqlite3": "^5.1.7",
     "stream-buffers": "^3.0.2",
     "string-strip-html": "^13.4.3",
@@ -46,10 +48,14 @@
     "text-to-speech": "^1.0.10",
     "twitter-video-downloader": "^1.0.13",
     "unorm": "^1.6.0",
-    "venom-bot": "^4.2.1",
-    "whatsapp-web.js": "^1.23.0",
+    "venom-bot": "^5.0.5",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus",
+    "xlsx": "^0.18.5",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5",
     "ytsr": "^3.8.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1"
   }
 }
